discussion/kv_engine/187949/187949_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Add experimental support for gRPC

Very WIP experimental support for gRPC

  * _BLOCKING_ the gRPC call for the duration of an operation
    (intentionally as we've not even tried to plug it into
    our async mode (thread is just waiting for the notification)
  * Use a different protocol than stellar-nebula as it:
    * Duplicated a lot of structures with different names
      which would increase the amount of work trying to
      add missing fields
    * Better structure some of the data
  * Does not deal with all datatypes in all cases, copying over
    xattrs etc
  * The ticker based auth cache should not live forever ;)

@todo add back Subdoc and RangeScan

    ./grpc_test --user trond --password asdfasdf Mutate '
         {
           "url": {
             "bucket_name": "bucket",
             "scope_name": "myscope",
             "collection_name": "mycollection",
             "document_id": "document"
           },
           "operation": "insert",
           "content": {
             "content": "1234"
           }
         }'
    {
      "bucket_name": "bucket",
      "cas": 1678354266116587520,
      "collection_id": 8,
      "seq_no": 3,
      "vbucket_id": 105,
      "vbucket_uuid": 257727767609388
    }

    ./grpc_test --user trond --password asdfasdf Counter '
         {
           "url": {
             "bucket_name": "bucket",
             "collection_id": 8,
             "vbucket_id": 105,
             "document_id": "document"
           },
           "delta": 1
         }'
    {
      "content": 1235,
      "mutation_token": {
        "bucket_name": "bucket",
        "cas": 1678354598589497344,
        "collection_id": 8,
        "seq_no": 4,
        "vbucket_id": 105,
        "vbucket_uuid": 257727767609388
      }
    }

    ./grpc_test --user trond --password asdfasdf Get '
         {
           "url": {
             "bucket_name": "bucket",
             "collection_id": 8,
             "vbucket_id": 105,
             "document_id": "document"
           }
         }'
    {
      "cas": 1678354598589497344,
      "collection_id": 8,
      "content": {
        "content": "1235",
        "content-type": "json"
      },
      "vbucket_id": 105
    }

Change-Id: I93f818408ff1b4b41ce2c4de7febd4d80efae525

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-03-09 11:16:44.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-09 12:06:45.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22890/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_cookie.h:20:10: error: "grpcpp/server.h" file not found [clang-diagnostic-error]
#include <grpcpp/server.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/grpc/main.cc:11:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/stellar/json_conversion.h:13:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22890/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10:
error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22890/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23138/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23138/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1691/ : FAILURE

Timeout of a CTest test [2023-03-09T11:37:41.673Z]  12/480 Test #276: ep-engine_ep_unit_tests.EphemeralOrPersistent/STItemPagerTest ...........................................} ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1691/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24527/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24527/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26264/ : FAILURE

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonNo_SnappyNo_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonNo_SnappyNo_AlwaysBufferYes
[2023-03-09T12:01:28.167Z] unknown file: Failure
[2023-03-09T12:01:28.167Z] C++ exception with description "MemcachedConnection::recvDcpBufferAck: Unexpected buffer bytes:0 expected:1527" thrown in the test body.
[2023-03-09T12:01:28.167Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonNo_SnappyNo_AlwaysBufferYes, where GetParam() = (Mcbp, XattrNo, 4-byte object <01-00 00-00>, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (41 ms)
TransportProtocols/DcpConsumerBufferAckTest.Basic/Mcbp_XattrNo_JsonNo_SnappyNo_AlwaysBufferYes
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26264/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43906/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52342/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33370/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12703/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12622/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24953/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25411/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-09 22:33:18.000000000
Message: 
Patch Set 3:

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22890/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_cookie.h:20:10: error: "grpcpp/server.h" file not found [clang-diagnostic-error]
#include <grpcpp/server.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/grpc/main.cc:11:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/stellar/json_conversion.h:13:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22890/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10:
error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22890/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23138/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23138/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43906/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52342/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33370/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12703/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1695/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12622/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24953/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25411/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26268/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24531/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
